fixed css attribute and changed article content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!docTYPE=HTML>
-  <html>
-   <head>
+<!DOCTYPE HTML>
+<html>
+    <head>
        <title>Welcome to my Personal Page</title>
-       <link src="styles.css" rel="stylesheet">
-   </head>
+       <link href="styles.css" rel="stylesheet">
+    </head>
 
-   <body>
+    <body>
         <article id="intro" class="article">
-            I enjoy cycling, recording music and craft beer. I'm learning coding and hope to change careers soon.
+            I'm Greg and enjoy cycling, recording music and craft beer. I'm learning coding and hope to change careers soon.
         </article>
 
         <article id="history" class="article">
@@ -15,4 +15,4 @@
         </article>
     </body>
 
-  </html>
+</html>
