Changed wording of my past work history

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </article>
 
         <article id="history" class="article">
-            I used to be a freelance audio engineer. 
+            I have been a freelance audio engineer in Nashville since 2003. 
         </article>
     </body>
 
