Finished adding  new title for cohort 22

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
 
     <body>
+        <h1> I am in NSS Cohort 22</h1>
+        
         <article id="intro" class="article">
             I'm Greg and enjoy cycling, recording music and craft beer. I'm learning coding and hope to change careers soon.
         </article>
