created first draft for contact page. Changed container div in Index.html

--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
 </head>
 
 <body>
-    <div class="site-content">
-        <header>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                            </button>
-                        <a class="navbar-brand" href="#">GML</a>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav" role: "tablist">
-
-                            <li><a href="#bio">Bio</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div>
+    <div class="site-content container">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    <a class="navbar-brand" href="index.html">GML</a>
                 </div>
-            </nav>
-        </header>
+
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav" role: "tablist">
+
+                        <li><a href="/index.html">Bio</a></li>
+                        <li><a href="/portfolio.html">Portfolio</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
 
 
-        <article id="intro" class="jumbotron jumbo-style container left-pull">
+        <header id="intro" class="jumbotron jumbo-style container left-pull">
             <div class="row">
                 <div class="col-xs-9">
 
@@ -48,7 +47,7 @@
                         alt="Greg Headshot" width="180">
                 </div>
             </div>
-        </article> <!-- /end of jumbotron -->
+        </header> <!-- /end of jumbotron -->
 
 
         <article id="Bio" class="article container-fluid text-center">
@@ -56,11 +55,11 @@
             a freelance audio engineer in Nashville since 2003.
         </article>
 
-        <!-- /end of main div -->
+      
     </div>
     <!-- /end of site-content -->
 
-    <footer id="contact" class="container-fluid">
+    <footer id="footer" class="container-fluid">
             <div class="row">
               <div class="col-xs-4 pull-left">
                 <br>
