more placeholder text

--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 
 
         <article id="resume" class="article container-fluid text-center">
-           
+           This will be a copy of my resume.
         </article>
 
       
