added link to resume and removed class on contact.html for div width

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="site-content container contact-page">
+    <div class="site-content container">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
