--- a/resume.html
+++ b/resume.html
@@ -37,13 +37,13 @@
         
 
 
-        <header class="container">
+        <header class="page-header">
             <h1> Resume </h1>
         </header> 
 
 
         <article id="resume" class="article container-fluid text-center">
-           This will be a copy of my resume.
+           <a href="https://drive.google.com/file/d/0B73GTEesc6fzQzNIa0pwRjh1aVE/view?usp=sharing">Click for resume.</a>        
         </article>
 
       
