formated header text

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,11 @@
 
 
 
-        <header id="intro" class="container left-pull">
-
+        <header class="page-header">
+            <h1>Portfolio</h1>
         </header>
 
         <div id="portfolio" class="container-fluid text-center">
-            <h1 style="letter-spacing: 2px; font-family: arial">Portfolio</h1>
-            <br>
             <div class="col-sm-6">
                 <div class="thumbnail">
                     <a href="https://drive.google.com/open?id=0B73GTEesc6fzeWpOTHBHWDZGekU" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzeWpOTHBHWDZGekU" class="img-responsive" alt="Website to load a random quote">
@@ -101,7 +99,7 @@
                 <p>coded and created by Greg Lawrence</p>
             </div>
             <div class="pull-right">
-                <a href="mailto:gregaudio@Fake.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
+                <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
                 <a href="https://www.facebook.com/gregaudio" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter"></i></a>
 
