edited mail-to address

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>coded and created by Greg Lawrence</p>
               </div>
               <div class="pull-right">
-                <a href="mailto:gregaudio@Fake.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
+                <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
                 <a href="https://www.facebook.com/gregaudio" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter"></i></a>
                 
