added object database for contact info, and stored in local storage

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                     <p>coded and created by Greg Lawrence</p>
                 </div>
                 <div class="pull-right">
-                    <a href="mailto:gregaudio@Fake.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
+                    <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
                     <a href="https://www.facebook.com/gregaudio" target="_blank"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter"></i></a>
                     
@@ -83,6 +83,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/contact.js"></script>
 </body>
 
 </html>
