--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Portfolio Web Projects by Greg Lawrence</title>
+    <title>Projects by Greg Lawrence</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav" role: "tablist">
 
                         <li><a href="/index.html">Bio</a></li>
-                        <li><a href="/portfolio.html">Portfolio</a></li>
+                        <li><a href="/projects.html">Projects</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/resume.html">Resume</a></li>
                         <li><a href="/contact.html">Contact</a></li>
@@ -38,7 +38,7 @@
 
 
         <header class="page-header">
-            <h1>Portfolio</h1>
+            <h1>Projects</h1>
         </header>
 
         <div id="portfolio" class="container-fluid text-center">
