--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav" role: "tablist">
 
                         <li><a href="/index.html">Bio</a></li>
-                        <li><a href="/portfolio.html">Portfolio</a></li>
+                        <li><a href="/projects.html">Projects</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/resume.html">Resume</a></li>
                         <li><a href="/contact.html">Contact</a></li>
