created javascript object to hold projects and stored in local storage

--- a/projects.html
+++ b/projects.html
@@ -41,52 +41,19 @@
             <h1>Projects</h1>
         </header>
 
-        <div id="portfolio" class="container-fluid text-center">
-            <div class="col-sm-6">
+        <section id="portfolio" class="container-fluid text-center">
+            <article class="col-sm-6">
                 <div class="thumbnail">
-                    <a href="https://drive.google.com/open?id=0B73GTEesc6fzeWpOTHBHWDZGekU" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzeWpOTHBHWDZGekU" class="img-responsive" alt="Website to load a random quote">
+                    <a href="https://drive.google.com/uc?id=0B73GTEesc6fzbDFDa0d1VGRiZW8" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzbDFDa0d1VGRiZW8" class="img-responsive" alt="Website to load a random quote">
                         <div class="caption">
-                          <p>Random Quote Generator</p>
+                          <p>Personal Page</p>
                         </div>
                       </a>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <a href="https://chewieez.github.io/FCC-Weather/" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzSlN1NzJtSUVHekE" class="img-responsive"  alt="Website to check your local weather Page">
-                        <div class="caption">
-                          <p>Local Weather Page</p>
-                        </div>
-                      </a>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <a href="https://chewieez.github.io/fCC-Wikipedia-Search/" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzMTloTGxLZmM1ZUE" class="img-responsive" alt="Website to search Wikipedia articles">
-                        <div class="caption">
-                          <p>Wikipedia Search Page</p>
-                        </div>
-                      </a>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <a href="https://drive.google.com/uc?id=0B73GTEesc6fzRkoyVmgtbkRFbkE" target="_blank"><img src="https://drive.google.com/uc?id=0B73GTEesc6fzRkoyVmgtbkRFbkE" class="img-responsive" style="width:100%" alt="Website to view Twitch Streamers">
-                        <div class="caption">
-                          <p>Twitch Streamer Viewer</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
+            </article>
+            
+        </section>
     
-
-
-
-
-    <article class="article container-fluid">
-
-    </article>
 
 
     </div>
@@ -112,6 +79,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="projects.js"></script>
 </body>
 
 </html>
