--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="/css/projects-styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
