added footer icons for linkedin and github, removed fb icon, added aria-hidden tags

--- a/resume.html
+++ b/resume.html
@@ -52,16 +52,16 @@
 
     <footer id="footer" class="container-fluid">
             <div class="row">
-              <div class="col-xs-4 pull-left">
-                <br>
-                <p>coded and created by Greg Lawrence</p>
-              </div>
-              <div class="pull-right">
-                <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
-                <a href="https://www.facebook.com/gregaudio" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter"></i></a>
-                
-              </div>
+                <div class="col-xs-4 pull-left">
+                    <br>
+                    <p>coded and created by Greg Lawrence</p>
+                </div>
+                <div class="pull-right">
+                    <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/gregmlawrence/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://github.com/Chewieez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                </div>
             </div>
         
           </footer>
