--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,10 @@
                 <p>coded and created by Greg Lawrence</p>
             </div>
             <div class="pull-right">
-                <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope"></i></a>
-                <a href="https://www.facebook.com/gregaudio" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter"></i></a>
-
+                <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/gregmlawrence/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/Chewieez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
         </div>
 
