--- a/resume.html
+++ b/resume.html
@@ -40,13 +40,13 @@
 
 
         <header class="page-header">
-            <h1> Resume </h1>
+            <h1> Professional History </h1>
         </header> 
 
 
-        <article id="resume" class="article container-fluid text-center">
-           <a href="https://drive.google.com/file/d/0B73GTEesc6fzQzNIa0pwRjh1aVE/view?usp=sharing">Click for resume.</a>        
-        </article>
+        <section id="professional-history" class="article container-fluid ">
+            
+        </section>
 
       
     </div>
@@ -73,6 +73,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/resume.js"></script>
+    <script src="/resume-controller.js"></script>
 </body>
 
 </html>
