added second blog post

--- a/blog.html
+++ b/blog.html
@@ -87,6 +87,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="blog.js"></script>
+    <script src="blog-controller.js"></script>
 </body>
 
 </html>
