--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="/css/blog-styles.css" rel="stylesheet" type="text/css">
     <link href="/css/pagination-styles.css" rel="stylesheet" type="text/css">
 </head>
 
