starting homepage redesign, inserted placeholder image, made footer fixed, bio info will not be off page, accessible via link or button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="site-content container">
+    <div class="site-content">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -38,17 +38,19 @@
         </nav>
         
 
+<!-- classes I removed from header for redesign class="jumbotron jumbo-style left-pull" -->
+        <header id="intro">
+            <div class="header-content">
+                <div class="header-content-inner">
 
-        <header id="intro" class="jumbotron jumbo-style container left-pull">
-            <div class="row">
-                <div class="col-xs-9">
-
-                    <h1 class="lead">Greg Lawrence</h1>
-                    <h6 class="lead" style="font-size: 1.2em;">Nashville Software School Student Cohort 22 / Audio Engineer</h6>
+                    <h1 id= "homeHeading" class="lead">Greg Lawrence</h1>
+                    <hr>
+                    <h6 class="lead" style="font-size: 1.2em;">Web Development Student / Audio Engineer</h6>
+                    <a href="#bio" class="btn btn-primary btn-xl page-scroll">Learn More</a>
                 </div>
 
-                <div class="col-xs-3"><img class="img-responsive img-circle img-shadow" src="https://drive.google.com/uc?id=0B73GTEesc6fzSVo0MW16Y0NYSXM" alt="Greg Headshot" width="180">
-                </div>
+                <!-- <div class="col-xs-3"><img class="img-responsive img-circle img-shadow" src="https://drive.google.com/uc?id=0B73GTEesc6fzSVo0MW16Y0NYSXM" alt="Greg Headshot" width="180">
+                </div> -->
             </div>
         </header> <!-- /end of jumbotron -->
 
@@ -65,7 +67,7 @@
     </div>
     <!-- /end of site-content -->
 
-    <footer id="footer" class="container-fluid">
+    <footer id="footer" class="homepage-footer navbar-fixed-bottom container-fluid">
             <div class="row">
                 <div class="col-xs-4 pull-left">
                     <br>
