changing fonts, adding padding to bio section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Welcome to my Personal Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Saira+Extra+Condensed:300,400,500" rel="stylesheet">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav" role: "tablist">
 
-                        <li><a href="/index.html/#bio">Bio</a></li>
+                        <li><a href="#bio">Bio</a></li>
                         <li><a href="/projects.html">Projects</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/resume.html">Resume</a></li>
@@ -43,9 +44,9 @@
             <div class="header-content">
                 <div class="header-content-inner">
 
-                    <h1 id= "homeHeading" class="lead">Greg Lawrence</h1>
+                    <h1 id= "homeHeading">Greg Lawrence</h1>
                     <hr>
-                    <h6 class="lead" style="font-size: 1.2em;">Web Development Student / Audio Engineer</h6>
+                    <h6 class="lead">Web Development Student / Audio Engineer</h6>
                     <a href="#bio" class="btn btn-primary btn-xl page-scroll">Learn More</a>
                 </div>
 
