made footer smaller and fixed responsive behavior as viewport shrinks. elements slowly come together and then stack, centered now. That took forever to figure out.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
     <footer id="footer" class="homepage-footer navbar-fixed-bottom container-fluid">
             <div class="row">
-                <div class="col-xs-4 pull-left">
-                    <br>
+                <div id= "footer-left" class="col-xs-12 text-center col-sm-4 col-md-3">
+                    
                     <p>coded and created by Greg Lawrence</p>
                 </div>
-                <div class="pull-right">
+                <div id="footer-right" class="col-xs-12 text-center col-sm-4 col-sm-offset-4 col-md-3 col-md-offset-6">
                     <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/gregmlawrence/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     <a href="https://github.com/Chewieez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
