changes width of hr line under my name, changed tag on #bio to container, from container-fluid, to make that area 80% width.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </header> <!-- /end of jumbotron -->
 
 
-        <article id="bio" class="container-fluid">
+        <article id="bio" class="container">
             
             <p>I am currently a student at the Nashville Software School in Nashville TN. I have been in Nashville for over 15 years working in the music business as an audio engineer. I have always enjoyed working with computers, android phones and technology. I've had several side jobs which involved different aspects of using digital tools such as tweaking websites, updating content on websites, editing photos in photoshop and consulting businesses on social media setup and management. I really enjoy problem solving, creating things and working on projects on a team. I am excited to learn as much as possible while attending NSS and transition into a career in Web Development.  </p> 
 
