--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Thoughts of a Web Development Student</title>
+    <title>Thoughts of a NSS Student</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 
 
         <header id="" class="blog-header page-header">
-            <h1>Thoughts of a Web Dev Student</h1>
+            <h1>Thoughts of a NSS Student</h1>
         </header> 
 
 
