fixed bio links and copied new footer code to all pages

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav" role: "tablist">
 
-                        <li><a href="/index.html">Bio</a></li>
+                        <li><a href="/index.html#bio">Bio</a></li>
                         <li><a href="/projects.html">Projects</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/resume.html">Resume</a></li>
@@ -70,20 +70,18 @@
     </div>
     <!-- /end of site-content -->
 
-    <footer id="footer" class="container-fluid">
-            <div class="row">
-                <div class="col-xs-4 pull-left">
-                    <br>
-                    <p>coded and created by Greg Lawrence</p>
-                </div>
-                <div class="pull-right">
-                    <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/gregmlawrence/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="https://github.com/Chewieez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                </div>
-            </div>
-          </footer>
+    <footer id="footer" class="footer-grid">     
+        <div id= "footer-left">
+            <p>coded and created by Greg Lawrence</p>
+        </div>
+   
+        <div id="footer-right">
+            <a href="mailto:gregaudio@gmail.com?Hello%20there!"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/gregmlawrence/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/Chewieez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
