--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Saira+Extra+Condensed:300,400,500" rel="stylesheet">
 </head>
 
 <body>
