--- a/contact/index.html
+++ b/contact/index.html
@@ -9,8 +9,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <link href="/css/contact-styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
+    <link href="/contact/contact-styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,10 +30,10 @@
                     <ul class="nav navbar-nav" role: "tablist">
 
                         <li><a href="/index.html#bio">Bio</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/blog.html">Blog</a></li>
-                        <li><a href="/resume.html">Resume</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/projects/index.html">Projects</a></li>
+                        <li><a href="/blog/index.html">Blog</a></li>
+                        <li><a href="/resume/index.html">Resume</a></li>
+                        <li><a href="/contact/index.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/contact.js"></script>
+    <script src="/contact/contact.js"></script>
 </body>
 
 </html>
