added template content for admin page and header title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                    <a class="navbar-brand" href="index.html">GML</a>
+                    <a class="navbar-brand" href="/index.html">GML</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -33,6 +33,7 @@
                         <li><a href="/blog/index.html">Blog</a></li>
                         <li><a href="/resume/index.html">Resume</a></li>
                         <li><a href="/contact/index.html">Contact</a></li>
+                        <li><a href="/admin/index.html"><span class="invisible">Admin</span></a></li>
                     </ul>
                 </div>
             </div>
