cleaned up some naming in blog-controller, commented work flow in admin-controller

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to my Personal Page</title>
+        <title>Admin</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet"> -->
@@ -41,6 +41,14 @@
             <header class="page-header"> 
                 <h1>Welcome to the Admin Page</h1>
             </header>   
+
+           
+                <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
+                <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
+                <textarea id="admin-blog-content "name="admin-blog-content" placeholder="Write your blog content here"></textarea>
+                <br>
+                <button id="admin-submit-blog">Submit</button>
+            </form>
 
     </div>
     <!-- /end of site-content -->
