reorganized blog-factory and moved code to create blog database inside an if statement and then in a function.

--- a/admin/index.html
+++ b/admin/index.html
@@ -42,10 +42,11 @@
                 <h1>Welcome to the Admin Page</h1>
             </header>   
 
-           
+                <label>Blog Title</label>
                 <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
                 <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
                 <textarea id="admin-blog-content "name="admin-blog-content" placeholder="Write your blog content here"></textarea>
+                <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="Enter tags for your entry separated by a comma">
                 <br>
                 <button id="admin-submit-blog">Submit</button>
             </form>
@@ -65,8 +66,8 @@
                 <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
         </footer>
-
-        <script src="/admin/admin-factory.js"></script>
+        <script src="/blog/blog-factory.js"></script>
         <script src="/admin/admin-controller.js"></script>
+        <script src="/admin/admin-factory.js"></script>
     </body>
 </html>
