--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,7 @@
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav" role: "tablist">
         
-                                <li><a href="#bio">Bio</a></li>
+                                <li><a href="/index.html#bio">Bio</a></li>
                                 <li><a href="/projects/index.html">Projects</a></li>
                                 <li><a href="/blog/index.html">Blog</a></li>
                                 <li><a href="/resume/index.html">Resume</a></li>
@@ -48,7 +48,7 @@
                 <textarea id="admin-blog-content "name="admin-blog-content" placeholder="Write your blog content here"></textarea>
                 <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="Enter tags for your entry separated by a comma">
                 <br>
-                <button id="admin-submit-blog">Submit</button>
+                <button id="admin-save-blog">Save Blog</button>
             </form>
 
     </div>
