user can now input a new blog entry from admin page and it will be added to database and stored in local storage

--- a/admin/index.html
+++ b/admin/index.html
@@ -42,14 +42,17 @@
                 <h1>Welcome to the Admin Page</h1>
             </header>   
 
-                <label>Blog Title</label>
+                <label>Title</label>
                 <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
+                <label>Author</label>
                 <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
-                <textarea id="admin-blog-content "name="admin-blog-content" placeholder="Write your blog content here"></textarea>
+                <label>Content</label>
+                <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Write your blog content here"></textarea>
+                <label>Tags</label>
                 <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="Enter tags for your entry separated by a comma">
                 <br>
                 <button id="admin-save-blog">Save Blog</button>
-            </form>
+            
 
     </div>
     <!-- /end of site-content -->
