--- a/admin/index.html
+++ b/admin/index.html
@@ -39,20 +39,20 @@
                 </nav>
                 
             <header class="page-header"> 
-                <h1>Welcome to the Admin Page</h1>
+                <h1>Create a Blog Post</h1>
             </header>   
-
-                <label>Title</label>
-                <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
-                <label>Author</label>
-                <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
-                <label>Content</label>
-                <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Write your blog content here"></textarea>
-                <label>Tags</label>
-                <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="Enter tags for your entry separated by a comma">
-                <br>
-                <button id="admin-save-blog">Save Blog</button>
-            
+                <section id="admin-blog-entry">
+                    <label>Title</label>
+                    <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
+                    <label>Author</label>
+                    <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
+                    <label>Content</label>
+                    <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Compose your blog content here" rows="10" cols="100"></textarea>
+                    <label>Tags</label>
+                    <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="separate, tags, with, commas">
+                    <br>
+                    <button id="admin-save-blog" class="btn btn-primary">Save Blog</button>
+                </section>
 
     </div>
     <!-- /end of site-content -->
