added ability to enter more than one blog post through admin form without refreshing page. Buttons work after each entry and do not break or duplicate. Edited comments in code in admin-controller.js

--- a/admin/index.html
+++ b/admin/index.html
@@ -53,6 +53,8 @@
                     <br>
                     <button id="admin-save-blog" class="btn btn-primary">Save Blog</button>
                 </section>
+                <section id="new-button">
+                </section>
 
     </div>
     <!-- /end of site-content -->
