added form validation with a js function, added autofocus to first input field

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="/blog/index.html">Blog</a></li>
                         <li><a href="/resume/index.html">Resume</a></li>
                         <li><a href="/contact/index.html">Contact</a></li>
-                        <li><a href="/admin/index.html"><span class="invisible">Admin</span></a></li>
+                        <li><a href="/admin/blog.html"><span class="invisible">Admin</span></a></li>
                     </ul>
                 </div>
             </div>
