--- a/admin/blog.html
+++ b/admin/blog.html
@@ -42,14 +42,17 @@
                 <h1>Create a Blog Post</h1>
             </header>   
                 <section id="admin-blog-entry">
+                    <form name="adminBlogEntry">
                     <label>Title</label>
-                    <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here">
+                    <!-- Added autofocus to title input field to automatically place the cursor in this field on page load -->
+                    <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here" autofocus required>
                     <label>Author</label>
-                    <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name">
+                    <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name" autocomplete="on" pattern="[A-Z]" required>
                     <label>Content</label>
-                    <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Compose your blog content here" rows="10" cols="100"></textarea>
+                    <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Compose your blog content here" rows="10" cols="100" required></textarea>
                     <label>Tags</label>
                     <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="separate, tags, with, commas">
+                    </form>
                     <br>
                     <button id="admin-save-blog" class="btn btn-primary">Save Blog</button>
                 </section>
