edited homepage content and tweaked location of bio info on mobile view when bio link is clicked

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <h1 id= "homeHeading">Greg Lawrence</h1>
                     <hr>
-                    <h6 class="lead">Web Development Student / Audio Engineer</h6>
+                    <h6 class="lead">Web Developer / Audio Engineer</h6>
                     <a href="#bio" class="btn btn-primary btn-xl page-scroll">Learn More</a>
                 </div>
 
@@ -59,7 +59,7 @@
 
         <article id="bio" class="container">
             
-            <p>I am currently a student at the Nashville Software School in Nashville TN. I have been in Nashville for over 15 years working in the music business as an audio engineer. I have always enjoyed working with computers, android phones and technology. I've had several side jobs which involved different aspects of using digital tools such as tweaking websites, updating content on websites, editing photos in photoshop and consulting businesses on social media setup and management. I really enjoy problem solving, creating things and working on projects on a team. I am excited to learn as much as possible while attending NSS and transition into a career in Web Development.  </p> 
+            <p>I have lived in Nashville, TN for over 15 years working in the music business as an audio engineer and am currently enrolled in the Nashville Software School. I have always enjoyed working with computers, android phones and technology. I've had several side jobs which involved different aspects of using digital tools such as tweaking websites, updating content on websites, editing photos in photoshop and consulting businesses on social media setup and management. I really enjoy problem solving, creating things and working on projects on a team. I am excited to learn as much as possible while attending NSS and grow my skills as a web developer.</p> 
 
             <p>I also enjoy cycling, hiking, craft beer, working with my hands. I live in Nashville with my wife and two kids. </p>
         
