moved styles and scripts files into their own folders for admin and blog pages

--- a/admin/blog.html
+++ b/admin/blog.html
@@ -9,7 +9,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
         <link href="../styles.css" rel="stylesheet">
-        <link href="/admin/admin-styles.css" rel="stylesheet">
+        <link href="/admin/styles/admin-styles.css" rel="stylesheet">
     </head>
     <body>
         <div class="site-content container">
@@ -74,8 +74,7 @@
                 <a href="https://www.twitter.com/gregaudio" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
         </footer>
-        <script src="/blog/blog-factory.js"></script>
-        <script src="/admin/admin-controller.js"></script>
-        <script src="/admin/admin-factory.js"></script>
+        <script src="/blog/scripts/blog-factory.js"></script>
+        <script src="/admin/scripts/admin-controller.js"></script>
     </body>
 </html>
