--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
     <link href="../styles.css" rel="stylesheet">
-    <link href="/contact/contact-styles.css" rel="stylesheet">
+    <link href="/contact/styles/contact-styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/contact/contact.js"></script>
+    <script src="/contact/scripts/contact.js"></script>
 </body>
 
 </html>
