--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
     <link href="../styles.css" rel="stylesheet">
-    <link href="/resume/resume-styles.css" rel="stylesheet">
+    <link href="/resume/styles/resume-styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -71,8 +71,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/resume/resume.js"></script>
-    <script src="/resume/resume-controller.js"></script>
+    <script src="/resume/scripts/resume.js"></script>
+    <script src="/resume/scripts/resume-controller.js"></script>
 </body>
 
 </html>
