--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
-    <link href="../styles.css" rel="stylesheet" type="text/css">
+    <link href="../styles/styles.css" rel="stylesheet" type="text/css">
     <link href="/projects/styles/projects-styles.css" rel="stylesheet" type="text/css">
 </head>
 
