wrote code to create a new dom element to display a list of blog entries

--- a/admin/blog.html
+++ b/admin/blog.html
@@ -12,7 +12,7 @@
         <link href="/admin/styles/admin-styles.css" rel="stylesheet">
     </head>
     <body>
-        <div class="site-content container">
+        <div class="site-content container" id="site-content">
                 <nav class="navbar navbar-inverse navbar-fixed-top">
                     <div class="container-fluid">
                         <div class="navbar-header">
