--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="site-content">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="myNavbar">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -28,10 +28,10 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                    <a class="navbar-brand" href="/index.html">GML</a>
+                    <a class="navbar-brand nav__link--landingPage" href="#">GML</a>
                 </div>
 
-                <div class="collapse navbar-collapse" id="myNavbar">
+                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" role: "tablist">
 
                         <li class="nav__Link"><a href="#bio" class="nav__link--bio">Bio</a></li>
@@ -88,9 +88,18 @@
             </header>
             
             <article class="container">
-                <section id="contact-list" class="contacts">
+                <section class="contacts" id="contact-list" >
                 </section>
             </article> 
+        </section>
+
+        <section class="mainSection hidden" id="resume">
+            <header class="page-header">
+                    <h1> Professional History </h1>
+            </header> 
+        
+            <section id="professional-history" class="article container-fluid">
+            </section>
         </section>
     </div>
     <!-- /end of site-content -->
