--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li class="nav__Link"><a href="#" class="nav__link--blog">Blog</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--resume">Resume</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--contact">Contact</a></li>
-                        <li class="nav__Link"><a href="#" class="nav__link--admin">Admin</span></a></li>
+                        <li class="nav__Link"><a href="#" class="nav__link--admin">Admin</a></li>
                     </ul>
                 </div>
             </div>
