--- a/index.html
+++ b/index.html
@@ -142,38 +142,13 @@
         </section>     <!-- End of Blog Page -->
 
         <section class="mainSection hidden" id="admin">
-            <section class="login" id="adminLogin">
-                <header class="page-header">
-                    <h3>Login</h3>
-                </header>
-                <form name="adminLoginForm">
-                    <label>Email</label>
-                    <input type="email" name="adminLoginEmail" class="form-control" autofocus required placeholder="...email">
-                    <label>Password</label>
-                    <input type="password" name="adminLoginPassword" class="form-control"  required placeholder="...password">
-                </form>
-            </section>
-            <section class="hidden" id="blogEntry">
-                <header class="page-header"> 
-                    <h1>Create a Blog Post</h1>
-                </header>   
-                <section id="admin-blog-entry">
-                    <form name="adminBlogEntryForm">
-                    <label>Title</label>
-                    <!-- Added autofocus to title input field to automatically place the cursor in this field on page load -->
-                    <input type="text" id="admin-blog-title" name="admin-blog-title" placeholder="Enter Blog Title Here" class="form-control" autofocus required>
-                    <label>Author</label>
-                    <input type="text" id="admin-blog-author" name="admin-blog-author" placeholder="Author name" class="form-control" autocomplete="on" required>
-                    <label>Content</label>
-                    <textarea id="admin-blog-content"name="admin-blog-content" placeholder="Compose your blog content here"  rows="10" cols="100" class="form-control" required></textarea>
-                    <label>Tags</label>
-                    <input type="text" id="admin-blog-tags" name="admin-blog-tags" placeholder="separate, tags, with, commas" class="form-control">
-                    </form>
-                    <br>
-                    <button id="admin-save-blog" class="btn btn-primary">Save Blog</button>
-                </section>
-                <section id="new-button">
-                </section>
+            <section id="loggingInOutControls">
+                
+            </section>  <!-- end of loggingInOutControls -->
+
+            <!-- The admin form will be populated below when user is successfully logged in -->
+            <section class="" id="blogEntry">
+                
             </section> 
         </section>   <!-- end of Admin page -->
     </div>
@@ -194,6 +169,20 @@
         </div>
     </footer>
 
+
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDCcUjGA2Aucemv8DdP4HDz8a6bVYCXenE",
+        authDomain: "personal-site-60774.firebaseapp.com",
+        databaseURL: "https://personal-site-60774.firebaseio.com",
+        projectId: "personal-site-60774",
+        storageBucket: "personal-site-60774.appspot.com",
+        messagingSenderId: "674756866097"
+      };
+      firebase.initializeApp(config);
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
