refactored to mimic some authorization setup from Steve's project. Still haven't gotten database write rules to work for just one user

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     </footer>
 
 
-    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
-    <script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script> -->
+    <!-- <script>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyDCcUjGA2Aucemv8DdP4HDz8a6bVYCXenE",
@@ -182,7 +182,7 @@
         messagingSenderId: "674756866097"
       };
       firebase.initializeApp(config);
-    </script>
+    </script> -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
